dev/openchamber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openchamber
  namespace: openchamber
spec:
  type: ExternalName
  externalName: 192.168.10.101
  ports:
    - name: http
      port: 3001
      protocol: TCP
